| Bug #5589 | libedit compile failure in term.c | ||
|---|---|---|---|
| Submitted: | 15 Sep 2004 9:42 | Modified: | 15 Sep 2004 15:18 |
| Reporter: | Lenz Grimmer | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Compiling | Severity: | S3 (Non-critical) |
| Version: | 4.1.5-pre | OS: | SGI IRIX 6.5 |
| Assigned to: | Victor Vagin | CPU Architecture: | Any |
[15 Sep 2004 9:42]
Lenz Grimmer
[15 Sep 2004 9:57]
Victor Vagin
bk commit into 4.1 tree (vva:1.2001) ChangeSet 1.2001 04/09/15 17:43:05 vva@eagle.mysql.r18.ru +2 -0 fixed Bug #5589 "libedit compile failure in term.c"
