fixed Bug #5589 "libedit compile failure in term.c"

(for octane2)

included term.h if there isn't termcap.h in cmd-line-utils/libedit/term.c


cmd-line-utils/libedit/term.c:
  fixed Bug #5589 "libedit compile failure in term.c"
  
  (for octane2)
  
  included term.h if there isn't termcap.h